{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CameraController",
            "id": "3786d287-c65b-406c-90f0-e69106432f88",
            "actions": [
                {
                    "name": "MouseX",
                    "type": "PassThrough",
                    "id": "345801bb-c6ee-4b92-a81c-4dc88cd97693",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseY",
                    "type": "PassThrough",
                    "id": "1fa0052d-ace6-4ad5-977e-4257bfd117d0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ab680e25-ab9c-4336-972c-ec5cbe8bbe8c",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "444c393d-34ad-4359-be21-69d7ecd78095",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "446de751-7a81-494b-a0c1-567961a8a482",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9d3003a-db07-46ef-b73f-b2b3f175b3ba",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Movement",
            "id": "07f7a003-63dd-424a-a5c4-7f11bec3d029",
            "actions": [
                {
                    "name": "WalkR/L",
                    "type": "Button",
                    "id": "87bdd0f6-9184-46c3-bd78-f6ca057794bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "WalkU/D",
                    "type": "Button",
                    "id": "857ddb92-d017-48ae-916f-a2580ac6e183",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "R/L",
                    "id": "c1d6eafc-3e6c-4d8f-82f8-28b35a957dd7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkR/L",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c367b9ff-0496-455a-9668-af00c7c1cd2b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkR/L",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c0dedffc-daa4-44d8-868b-474ad1183064",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkR/L",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "R/Lpad",
                    "id": "014287d0-390b-4632-8231-7c36acf0e04d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkR/L",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ea4de696-a73e-4e8f-8ea7-960cd90e1cfe",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkR/L",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "baefe63e-e3f2-4eef-aa5a-a9ef22db8c85",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkR/L",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "U/D",
                    "id": "5fce1df8-31d8-4ba0-9a64-bd7de11ec5f7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkU/D",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "af5ebb7b-c979-40ed-9b84-1d8dbc12d20a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkU/D",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "50b9544e-5c3f-4279-8cb6-5b0769935125",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkU/D",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "U/Dpad",
                    "id": "1475b5c6-a30a-4509-b0b8-f80dc0814614",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkU/D",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "70984950-12fd-46a7-b986-b11ddd4b5bb3",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkU/D",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0aa1b2f6-0ed0-464f-8383-2d2a41f8864b",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkU/D",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "883d2c16-7032-4578-a96e-e9793c58735a",
            "actions": [
                {
                    "name": "Active/Desactiv",
                    "type": "Button",
                    "id": "37128d06-1533-402d-99cb-eb1b4b0106cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "982baed5-dddc-4f0b-bc2e-0d9d7c99e5ad",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Active/Desactiv",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Message",
            "id": "ffcc7c9e-6d88-45d5-a541-7e46e4a0d8b2",
            "actions": [
                {
                    "name": "Active",
                    "type": "Button",
                    "id": "c67cfc67-4f93-414e-a0c8-42f3daeb8f14",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Send",
                    "type": "Button",
                    "id": "10a7c93a-e23d-425b-af50-9df476dbcd9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "03cfe94c-8358-4998-81dd-6c37ed037003",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Active",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6334a9fe-272a-4059-aa40-da827ecb2f89",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Send",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}